k8s/apps/nextcloud/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextcloud
  labels:
    kubernetes.io/metadata.name: nextcloud
