k8s/apps/nextcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - nextcloud.home.arpa
      secretName: nextcloud-tls
  rules:
    - host: nextcloud.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
